--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Creating Authentication with Node js",
   "main": "server.js",
   "scripts": {
+    "build": "npm install",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
